# RustGrapher

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: physics_bench.rs
examples/: basic.rs  headless.rs  wikipedia.rs
src/: datavis.rs  graph.rs  grapher.rs  lib.rs  main.rs  octatree.rs  properties.rs  qtv.rs  quadtree.rs  renderer.rs  simgraph.rs  simulator.rs  vectors.rs
src/datavis/: camera.rs  draw.rs  shapes.rs
src/grapher/: camera.rs
src/renderer/: camera.rs  draw.rs  event.rs  shapes.rs
tools/: Jenkinsfile  flamegraph.sh
