[package]
name = "grapher"
version = "0.1.0"
edition = "2021"
authors = [ "Alexander Neuhäuser <alexander.neuhaeuser@leafnova.net>" ]
repository = "https://github.com/iceHtwoO/RustGrapher"

[dependencies]
glam = "0.29.0"
glium = "*"
petgraph = "0.6.5"
rand = "0.8.5"
winit = { version = "0.28"}

[[example]]
name = "wikipedia"
path = "examples/wikipedia.rs"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "physics_bench"
harness = false

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[profile.release]
debug = true

[lints.clippy]
derivable_impls = "allow"
new_without_default = "allow"
